couchbase initial commit with multiple bucket support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
-couchbase.hostname=cb.nbadr1-xccifopr.cloud.couchbase.com
-couchbase.bucket.name=hotel-reservation
-couchbase.username=couchbase
-couchbase.password=Hindustan@1705
+spring.couchbase.bootstrap-hosts=localhost
+couchbase.bucket.names=datastore-bucket
+spring.couchbase.username=admin
+spring.couchbase.password=Admin@123
+spring.couchbase.expiry.inSeconds=6000
+couchbase.operation.timeout=6000
+spring.couchbase.env.ssl.enabled=false
+couchbase.connection.timeout=6000
 
